--- a/.azuredevops/pipelines/run-on-selfhosted-pool-sample-helm.yaml
+++ b/.azuredevops/pipelines/run-on-selfhosted-pool-sample-helm.yaml
@@ -20,6 +20,9 @@ parameters:
   - name: helloWaitSeconds
     type: number
     default: 180
+  - name: useAzureLocal
+    type: boolean
+    default: false
 
 stages:
   - stage: ${{ parameters.stageName }}
@@ -28,9 +31,13 @@ stages:
       - job: RunParallelTests
         displayName: "Run parallel tests on selected pool"
         pool:
-          ${{ if eq(parameters.os, 'linux') }}:
+          ${{ if and(eq(parameters.os, 'linux'), parameters.useAzureLocal) }}:
+            name: KubernetesPoolOnPremLinux${{ parameters.instanceNumber }}
+          ${{ if and(eq(parameters.os, 'linux'), not(parameters.useAzureLocal)) }}:
             name: KubernetesPoolLinux${{ parameters.instanceNumber }}
-          ${{ if eq(parameters.os, 'windows') }}:
+          ${{ if and(eq(parameters.os, 'windows'), parameters.useAzureLocal) }}:
+            name: KubernetesPoolOnPremWindows${{ parameters.instanceNumber }}
+          ${{ if and(eq(parameters.os, 'windows'), not(parameters.useAzureLocal)) }}:
             name: KubernetesPoolWindows${{ parameters.instanceNumber }}
         strategy:
           parallel: 5
